Revert "fixing gap"
This reverts commit c2674947546849f82b3e5def00b52c0d84054837.

--- a/style.css
+++ b/style.css
@@ -119,8 +119,3 @@ img {
 	max-width: 100%;
 	height: auto;
 }
-
-#emptiness{
-	margin:0%;
-	
-}
